Support for setting possible values for custom personnel option of type CHOICE.